[project]
name = "langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=7.3.0",
    "langgraph>=1.2.6",
]
